Fix the small block for an avavtar
Horizontal images does not fit well in a square blocks. Replacing them with a "background" property have fixed it.

--- a/static/blocks/project/ya-avatar/ya-avatar.styl
+++ b/static/blocks/project/ya-avatar/ya-avatar.styl
@@ -1,12 +1,18 @@
 .ya-avatar
+    background-size: cover
+    background-position: 50% 50%
     &_small
         width: 40px
         height: 40px
         border: 1px solid #223d58
         overflow: hidden
+        background-size: cover
+        background-position: 50% 50%
         & ^[0]__img
-            width: 100%
-            height: auto
+            min-width: 100%
+            min-height: 100%
+            display: inline-block
+            max-height: 100%
     &_message
         margin-top: 13px
     &_auto
@@ -30,5 +36,5 @@
         text-align: center
         overflow: hidden
         & ^[0]__img
-            width: 100%
+            -width: 100%
             height: auto
